--- a/frontend/src/assets/index.scss
+++ b/frontend/src/assets/index.scss
@@ -27,3 +27,38 @@
 			url('#{$poppins-regular-path}.ttf') format('truetype');
 	}
 }
+
+*,
+html {
+	--sb-track-color: var(--tw-slate-900, #0f172a);
+	--sb-thumb-color: var(--tw-slate-800, #1e293b);
+	--sb-thumb-hover: var(--tw-slate-700, #334155);
+	--sb-size: var(--radii-lg, 8px);
+	--sb-radii: var(--sb-size);
+	scroll-behavior: smooth;
+
+	&::-webkit-scrollbar-corner {
+		display: none;
+	}
+
+	&::-webkit-scrollbar {
+		width: var(--sb-size);
+		height: var(--sb-size);
+	}
+
+	&::-webkit-scrollbar-track {
+		background-color: var(--sb-track-color);
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background-color: var(--sb-thumb-color);
+		border-radius: var(--sb-radii);
+
+		&:hover,
+		&:active {
+			background-color: var(--sb-thumb-hover);
+		}
+	}
+	scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+	scrollbar-width: thin;
+}
