feat: add fonts file

--- a/frontend/src/assets/index.scss
+++ b/frontend/src/assets/index.scss
@@ -2,63 +2,5 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-	// + /* --------------- Font family --------------- */
-	$inter-bold-path: '/assets/fonts/Inter-Bold';
-	$poppins-regular-path: '/assets/fonts/Poppins-Regular';
-
-	@font-face {
-		font-family: 'Inter';
-		font-weight: bold;
-		font-display: swap;
-		font-style: normal;
-		src: local('Inter'), url('#{$inter-bold-path}.woff2') format('woff2'),
-			url('#{$inter-bold-path}.woff') format('woff'),
-			url('#{$inter-bold-path}.ttf') format('truetype');
-	}
-
-	@font-face {
-		font-family: 'Poppins';
-		font-weight: 400;
-		font-style: normal;
-		font-display: swap;
-		src: local('Poppins'), url('#{$poppins-regular-path}.woff2') format('woff2'),
-			url('#{$poppins-regular-path}.woff') format('woff'),
-			url('#{$poppins-regular-path}.ttf') format('truetype');
-	}
-}
-
-*,
-html {
-	--sb-track-color: var(--tw-slate-900, #0f172a);
-	--sb-thumb-color: var(--tw-slate-800, #1e293b);
-	--sb-thumb-hover: var(--tw-slate-700, #334155);
-	--sb-size: var(--radii-lg, 8px);
-	--sb-radii: var(--sb-size);
-	scroll-behavior: smooth;
-
-	&::-webkit-scrollbar-corner {
-		display: none;
-	}
-
-	&::-webkit-scrollbar {
-		width: var(--sb-size);
-		height: var(--sb-size);
-	}
-
-	&::-webkit-scrollbar-track {
-		background-color: var(--sb-track-color);
-	}
-
-	&::-webkit-scrollbar-thumb {
-		background-color: var(--sb-thumb-color);
-		border-radius: var(--sb-radii);
-
-		&:hover,
-		&:active {
-			background-color: var(--sb-thumb-hover);
-		}
-	}
-	scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
-	scrollbar-width: thin;
-}
+@import './fonts.scss';
+@import './scroll.scss';
